@@ -1,6 +1,6 @@
 /*
  This file is part of the BlueJ program. 
- Copyright (C) 1999-2009,2010,2011,2016  Michael Kolling and John Rosenberg
+ Copyright (C) 1999-2009,2010,2011,2016,2018  Michael Kolling and John Rosenberg
  
  This program is free software; you can redistribute it and/or 
  modify it under the terms of the GNU General Public License 
@@ -269,28 +269,28 @@ public class BField
             return ((StringReference) val).value();
         }
         if (val instanceof BooleanValue) {
-            return new Boolean(((BooleanValue) val).value());
+            return Boolean.valueOf(((BooleanValue) val).value());
         }
         if (val instanceof ByteValue) {
-            return new Byte(((ByteValue) val).value());
+            return Byte.valueOf(((ByteValue) val).value());
         }
         if (val instanceof CharValue) {
-            return new Character(((CharValue) val).value());
+            return Character.valueOf(((CharValue) val).value());
         }
         if (val instanceof DoubleValue) {
-            return new Double(((DoubleValue) val).value());
+            return Double.valueOf(((DoubleValue) val).value());
         }
         if (val instanceof FloatValue) {
-            return new Float(((FloatValue) val).value());
+            return Float.valueOf(((FloatValue) val).value());
         }
         if (val instanceof IntegerValue) {
-            return new Integer(((IntegerValue) val).value());
+            return Integer.valueOf(((IntegerValue) val).value());
         }
         if (val instanceof LongValue) {
-            return new Long(((LongValue) val).value());
+            return Long.valueOf(((LongValue) val).value());
         }
         if (val instanceof ShortValue) {
-            return new Short(((ShortValue) val).value());
+            return Short.valueOf(((ShortValue) val).value());
         }
 
         if (unpackArray && val instanceof ArrayReference)
