@@ -1,6 +1,6 @@
 /*
  This file is part of the BlueJ program. 
- Copyright (C) 1999-2009,2010,2012,2013,2014,2016  Michael Kolling and John Rosenberg 
+ Copyright (C) 1999-2009,2010,2012,2013,2014,2016,2018  Michael Kolling and John Rosenberg 
  
  This program is free software; you can redistribute it and/or 
  modify it under the terms of the GNU General Public License 
@@ -203,7 +203,7 @@ public class ExtensionWrapper
         extensionBluej = ExtensionBridge.newBluej(this, prefManager);
 
         try {
-            extensionInstance = (Extension)extensionClass.newInstance();
+            extensionInstance = (Extension)extensionClass.getDeclaredConstructor().newInstance();
         } catch (Throwable ex) {
             extensionInstance = null;
             extensionStatusString = "newExtension: Exception=" + ex.getMessage();
